# Camera-Traffic

./: .gitignore  README.md  channels.html  creat-database.sql  groups.html  index.html  output.html  scripts.js  styles.css  styles1.css
assets/css/: styles.css
assets/javascript/: scripts.js
assets/js/: scripts.js
backend/: index.js  package-lock.json  package.json
frontend/: channels.html  groups.html  index.html  output.html
html/: channels.html  index.html
model/: predict_realtime.py  pyproject.toml
train/: predict_realtime.py
