[project]
name = "camera-traffic"
version = "0.1.0"
description = "Camera Traffic Model"
readme = "../README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.0",
    "lap>=0.5.12",
    "numpy>=2.2.4",
    "opencv-python>=4.11.0.86",
    "requests>=2.32.3",
    "ultralytics>=8.3.23",
]
